--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">InfoDoenças</string>
-    <string name="title_home">Página Inicial</string>
+    <string name="title_home">Clínicas</string>
     <string name="title_dashboard">Doenças</string>
     <string name="title_notifications">Farmácias</string>
 </resources>
